error.log

> vaani-ai-frontend@2.0.0 dev
> vite


  [32m[1mVITE[22m v5.4.21[39m  [2mready in [0m[1m1348[22m[2m[0m ms[22m

  [32m➜[39m  [1mLocal[22m:   [36mhttp://localhost:[1m5173[22m/[39m
[2m  [32m➜[39m  [1mNetwork[22m[2m: use [22m[1m--host[22m[2m to expose[22m
[2m[32m  ➜[39m[22m[2m  press [22m[1mh + enter[22m[2m to show help[22m
node:internal/process/promises:394
    triggerUncaughtException(err, true /* fromPromise */);
    ^

[Failed to load PostCSS config: Failed to load PostCSS config (searchPath: E:/Program Files x84/Downloads/vaani-ai-complete/vaani-ai/frontend): [Error] Loading PostCSS Plugin failed: Cannot find module 'tailwindcss'
Require stack:
- E:\Program Files x84\Downloads\vaani-ai-complete\vaani-ai\frontend\postcss.config.js

(@E:\Program Files x84\Downloads\vaani-ai-complete\vaani-ai\frontend\postcss.config.js)
Error: Loading PostCSS Plugin failed: Cannot find module 'tailwindcss'
Require stack:
- E:\Program Files x84\Downloads\vaani-ai-complete\vaani-ai\frontend\postcss.config.js

(@E:\Program Files x84\Downloads\vaani-ai-complete\vaani-ai\frontend\postcss.config.js)
    at load (file:///E:/Program%20Files%20x84/Downloads/vaani-ai-complete/vaani-ai/frontend/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33632:11)
    at file:///E:/Program%20Files%20x84/Downloads/vaani-ai-complete/vaani-ai/frontend/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33657:16
    at Array.map (<anonymous>)
    at plugins (file:///E:/Program%20Files%20x84/Downloads/vaani-ai-complete/vaani-ai/frontend/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33656:8)
    at processResult (file:///E:/Program%20Files%20x84/Downloads/vaani-ai-complete/vaani-ai/frontend/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33726:14)
    at file:///E:/Program%20Files%20x84/Downloads/vaani-ai-complete/vaani-ai/frontend/node_modules/vite/dist/node/chunks/dep-BK3b2jBa.js:33856:14]

Node.js v22.17.0
